[package]
name = "spotify_party_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = {version = "1.0", features = ["derive"]}
mongodb = "2.8.2"
futures = "0.3.28"
actix-session = "0.9.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
